# organelle-segmenter-plugin

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  _setup.py  env_create.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  test_env2.yml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  publish_site.yml  test_and_lint.yml
.napari/: config.yml
depricated/: publish.yml  setup.py
docs/: conf.py  index.md  index.rst  notes.md
organelle_segmenter_plugin/: _dock_widget.py  _reader.py  index.html
organelle_segmenter_plugin/_tests/widgets/: workflow_thumbnails_test.py
organelle_segmenter_plugin/controller/: _interfaces.py  batch_processing_controller.py  workflow_select_controller.py  workflow_steps_controller.py
organelle_segmenter_plugin/core/: layer_reader.py  router.py  viewer_abstraction.py
organelle_segmenter_plugin/model/: channel.py  segmenter_model.py
organelle_segmenter_plugin/util/: ui_utils.py
organelle_segmenter_plugin/view/: _main_template.py  batch_processing_view.py  workflow_select_view.py  workflow_steps_view.py
organelle_segmenter_plugin/widgets/: batch_complete_dialog.py  workflow_buttons.py  workflow_dropdown.py  workflow_file_selector.py  workflow_select_z.py  workflow_step_widget.py  workflow_thumbnails.py
organelle_segmenter_plugin2/: _dock_widget.py  _reader.py  _style.py  napari.yaml
organelle_segmenter_plugin2/_tests/: style_test.py
organelle_segmenter_plugin2/_tests/controller/: batch_processing_controller_test.py  workflow_select_controller_test.py  workflow_steps_controller_test.py
organelle_segmenter_plugin2/_tests/core/: application_test.py  controller_test.py  layer_reader_test.py  router_test.py  state_test.py  view_manager_test.py  view_test.py  viewer_abstraction_test.py
organelle_segmenter_plugin2/_tests/model/: segmenter_model_test.py
organelle_segmenter_plugin2/_tests/util/: convert_test.py  lazy_test.py
organelle_segmenter_plugin2/_tests/view/: _main_template_test.py  batch_processing_view_test.py  workflow_select_view_test.py  workflow_steps_view_test.py
organelle_segmenter_plugin2/_tests/widgets/: collapsible_box_test.py  file_input_test.py  warning_message_test.py  workflow_step_widget_test.py  workflow_thumbnails_test.py
organelle_segmenter_plugin2/controller/: _interfaces.py  batch_processing_controller.py  workflow_select_controller.py  workflow_steps_controller.py
organelle_segmenter_plugin2/core/: _interfaces.py  application.py  controller.py  layer_reader.py  router.py  state.py  view_manager.py
organelle_segmenter_plugin2/model/: channel.py  segmenter_model.py
organelle_segmenter_plugin2/util/: directories.py  ui_utils.py
organelle_segmenter_plugin2/view/: _main_template.py  batch_processing_view.py  workflow_select_view.py  workflow_steps_view.py
organelle_segmenter_plugin2/widgets/: collapsible_box.py  param_sweep_widget.py  warning_message.py  workflow_dropdown.py  workflow_file_selector.py  workflow_select_z.py  workflow_step_widget.py  workflow_thumbnails.py
search/: search_index.json
