[bumpversion]
current_version = 0.0.1
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:file:setup.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:organelle_segmenter_plugin2/__init__.py]
search = {current_version}
replace = {new_version}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

[bdist_wheel]
universal = 1

[flake8]
exclude = 
	docs/
	*/_tests/*
ignore = 
	E203
	W291
	W503
	W293
	E261
max-line-length = 120

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
filterwarnings = 
	ignore::UserWarning
	ignore::FutureWarning

[coverage:run]
omit = 
	*/_tests/*
	**/__init__.py



# [options]
# packages = find:
# install_requires =
#     numpy
#     magicgui
#     qtpy

# python_requires = >=3.8
# include_package_data = True
# package_dir =
#     = .
# setup_requires = setuptools_scm
# # add your package requirements here

# [options.packages.find]
# where = .

# [options.entry_points]
# napari.manifest =
#     organelle-segmenter-npe2 = organelle_segmenter_plugin2:napari.yaml

# [options.extras_require]
# testing =
#     tox
#     pytest  # https://docs.pytest.org/en/latest/contents.html
#     pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
#     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
#     napari
#     pyqt5


# [options.package_data]
# * = *.yaml
