[metadata]
name = organelle-segmenter-npe2

description = A plugin that enables 2D image segmentation derived from tools from Allen Institute for Cell Science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ergonyc/organelle-segmenter-npe2
author = Andy Henrie
author_email = ergonyc@gmail.com
license = BSD-3
license_file = LICENSE
classifiers =
	Development Status :: 3 - Alpha	
	Intended Audience :: Science/Research	
	Framework :: napari	
	Topic :: Scientific/Engineering	
	Topic :: Scientific/Engineering :: Visualization	
	Topic :: Scientific/Engineering :: Information Analysis	
	Topic :: Scientific/Engineering :: Bio-Informatics	
	Programming Language :: Python	
	Programming Language :: Python :: 3	
	Programming Language :: Python :: 3.7	
	Programming Language :: Python :: 3.8	
	Programming Language :: Python :: 3.9	
	Operating System :: OS Independent	
	License :: OSI Approved :: BSD License	
project_urls =
    Bug Tracker = https://github.com/ergonyc/organelle-segmenter-npe2/issues
    Documentation = https://github.com/ergonyc/organelle-segmenter-npe2#README.md
    Source Code = https://github.com/ergonyc/organelle-segmenter-npe2
    User Support = https://github.com/ergonyc/organelle-segmenter-npe2/issues

[options]
packages = find:
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    aicssegmentation
    aicsimageio
    numpy
    scikit-image
    aicsimageio >= 4.7.0

python_requires = >=3.8
include_package_data = True
package_dir =
    = .
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = .

[options.entry_points]
napari.manifest =
    organelle-segmenter-npe2 = organelle_segmenter_plugin2:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
